<resources>
    <string name="app_name">Wassup</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="stat_bus">셔틀 버스 탑승 중</string>
    <string name="settings">설정</string>
    <string name="attendance">출석부</string>
    <string name="edit">학생 관리</string>
    <string name="description_edit">현재 %1$d명의 아이들이 있어요</string>
    <string name="add">추가</string>
    <string name="activity">활동</string>
    <string name="description_find_no">현재 범위를 벗어난 학생이 없어요</string>
    <string name="edit_range">제한 범위 수정</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="description_edit_info">정보 수정</string>
    <string name="info">정보</string>
    <string name="student_num">학생 휴대전화</string>
    <string name="parent_num">부모님 휴대전화</string>
    <string name="name">이름</string>
    <string name="title_activity_restriction">RestrictionActivity</string>
    <string name="restriction">제한 범위 수정</string>
    <string name="description_restriction">아이들의 활동 범위를 제한할 수 있어요</string>
    <string name="in_class">교실 안</string>
    <string name="description_class">아이들이 교실을 벗어나면 푸시로 알려드려요</string>
    <string name="out_class">교실 밖</string>
    <string name="description_out">아이들이 야외에서 일정 거리 이상 벗어나면 푸시로 알려드려요</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="edit_photo">사진 수정</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="id">아이디</string>
    <string name="pwd">암호</string>
    <string name="assign_beacon">비콘 재등록</string>
    <string name="signup">회원가입</string>
    <string name="no_account">아직 계정이 없으신가요?</string>
    <string name="signin">로그인</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="phone">전화번호</string>
    <string name="verificationNo">인증번호</string>
    <string name="title_activity_forgot">ForgotActivity</string>
    <string name="findPassword">암호 찾기</string>
    <string name="descriptionFind">암호를 바꿀 수 있어요</string>
    <string name="pwdCheck">암호 확인</string>
    <string name="title_activity_register_beacon">RegisterBeaconActivity</string>
    <string name="register_beacon">비콘 재등록</string>
    <string name="register">등록</string>
    <string name="deleteInfo">이 정보 지우기</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_bus">BusActivity</string>
    <string name="forgot">암호를 잊으셨나요?</string>
    <string name="next">다음</string>
    <string name="class_name">담당 반 이름</string>
    <string name="lead_teacher">인솔 교사</string>
    <string name="class_teacher">담임 교사</string>
    <string name="save">저장</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="back">이전</string>
    <string name="select_icon">아이콘 선택</string>
    <string name="add_event">이벤트 추가</string>
    <string name="myinfo">내 정보</string>
    <string name="title_activity_icon">IconActivity</string>
    <string name="desc_select_icon">아이콘을 선택해주세요</string>
    <string name="target">대상 선택</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="select">선택</string>
    <string name="title_activity_my_info">MyInfoActivity</string>
    <string name="edit_my_info">내 정보 수정</string>
    <string name="logout">로그아웃</string>
    <string name="new_pwd">새 암호</string>
    <string name="shuttle">셔틀 버스</string>
    <string name="indv">개인</string>
    <string name="absent">결석</string>
    <string name="title_activity_absent">AbsentActivity</string>
    <string name="desc_abs">아직 차에 있는 아이가 %1$d명, 결석한 아이가 %2$d명이에요</string>
    <string name="desc_login">서비스를 이용하려면 로그인이 필요해요</string>
    <string name="dark_mode">다크 모드</string>
</resources>
