<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activity.LoginActivity">
    <LinearLayout android:layout_width="match_parent" android:layout_height="116dp"
                  android:background="@drawable/gradient_header"
                  android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textStyle="bold"
                android:layout_marginStart="27dp"
                android:layout_marginTop="22dp"
                android:textSize="32sp"
                android:textColor="@color/colorText"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_login"
                android:layout_marginStart="27dp"
                android:textSize="14sp"
                android:textColor="@color/colorText"/>
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorDivDay"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_contents"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="27dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="27dp"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/cardBg"
                app:cardElevation="@dimen/cardElevation">

            <LinearLayout
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    android:layout_margin="18dp" android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextInputLayoutHintText"
                        app:boxBackgroundColor="@color/cardBgText"
                        android:layout_marginBottom="12dp"
                        android:id="@+id/textInputId">
                    <EditText
                            android:id="@+id/etId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:singleLine="true"
                            android:hint="@string/id"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextInputLayoutHintText"
                        app:boxBackgroundColor="@color/cardBgText"
                        android:id="@+id/textInputPwd"
                        app:passwordToggleEnabled="true">
                    <EditText
                            android:id="@+id/etPwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:hint="@string/pwd"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="27dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/colorText11"
                app:cardElevation="0dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:id="@+id/signin">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin"
                    android:id="@+id/textLogin"
                    android:textColor="@color/colorText55"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_margin="16dp"
                    android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/forgot"
                  android:textStyle="bold"
                  android:id="@+id/findBtn"
                  android:layout_gravity="end"
                  android:background="?attr/selectableItemBackgroundBorderless"
                  android:clickable="true"
                  android:focusable="true"
                  android:layout_marginEnd="27dp"
                  android:paddingTop="24dp"
                  android:paddingEnd="6dp"
                  android:paddingStart="6dp"
                  android:paddingBottom="24dp"/>

        <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_horizontal"
                      android:layout_marginBottom="24dp">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/no_account"
                      android:textStyle="bold"
                      android:layout_marginStart="16dp"
                      android:layout_gravity="center_vertical"
                      android:textSize="16sp"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/signup"
                      android:textStyle="bold"
                      android:textSize="16sp"
                      android:textColor="@color/colorAccent"
                      android:id="@+id/registerBtn"
                      android:clickable="true"
                      android:focusable="true"
                      android:background="?attr/selectableItemBackgroundBorderless"
                      android:paddingStart="16dp"
                      android:paddingEnd="16dp"
                      android:paddingTop="8dp"
                      android:paddingBottom="8dp"/>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>