<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MyInfoActivity"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_header">
        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="116dp"
                app:contentScrim="@drawable/gradient_header"
                android:id="@+id/collapsingToolBar"
                app:expandedTitleGravity="top"
                app:expandedTitleMarginTop="22dp"
                app:expandedTitleMarginStart="27dp"
                app:expandedTitleTextAppearance="@style/expanded"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:scrimAnimationDuration="150">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="63dp"
                    android:layout_marginStart="27dp"
                    android:text="내 정보를 수정할 수 있어요"
                    android:textSize="14sp"
                    android:textColor="@color/colorText"/>

            <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="top"
                    app:title="@string/edit_my_info"
                    app:layout_collapseMode="pin"
                    android:id="@+id/toolBar">
            </androidx.appcompat.widget.Toolbar>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/save"
                    android:textColor="@color/colorAccent"
                    android:padding="8dp"
                    android:layout_marginEnd="18dp"
                    android:textSize="14sp"
                    android:layout_marginTop="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/save"
                    android:layout_gravity="end"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDivDay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_contents"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="27dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="27dp"
                    app:cardCornerRadius="12dp"
                    app:cardBackgroundColor="@color/cardBg"
                    app:cardElevation="@dimen/cardElevation">

                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:layout_marginEnd="18dp"
                            android:layout_marginTop="18dp"
                            app:helperText="아이디는 변경할 수 없어요">
                        <EditText
                                android:id="@+id/etId"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/id"
                                android:enabled="false"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="18dp"
                                android:layout_marginStart="22dp"
                                android:text="@string/new_pwd"
                                android:textStyle="bold"
                                android:textColor="#77ffffff"
                                android:textSize="12sp"/>
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true"
                            app:hintEnabled="false">
                        <EditText
                                android:id="@+id/etPwd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="바꾸지 않음"
                                android:inputType="textPassword"
                                android:layout_marginStart="18dp"
                                android:layout_marginEnd="18dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:layout_marginEnd="18dp"
                            android:layout_marginTop="18dp">

                        <EditText
                                android:id="@+id/etName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/name"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:layout_marginEnd="18dp"
                            android:layout_marginTop="18dp"
                            app:helperText="주의! 반 이름을 바꾸더라도 데이터는 이전되지 않습니다.">

                        <EditText
                                android:id="@+id/etClass"
                                android:inputType="phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/class_name"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="18dp">

                        <EditText
                                android:id="@+id/etNum"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/phone"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="회원 유형"
                            android:textSize="12sp"
                            android:textColor="#9C9CA7"
                            android:textStyle="bold"
                            android:layout_marginStart="18dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginBottom="8dp"/>
                    <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginStart="18dp"
                            android:layout_marginEnd="18dp"
                            android:id="@+id/radioGroup"
                            android:layout_marginBottom="18dp">
                        <RadioButton
                                android:visibility="gone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lead_teacher"
                                android:id="@+id/radioLead"
                                android:layout_weight="1.2"/>
                        <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/class_teacher"
                                android:id="@+id/radioHr"
                                android:layout_weight="0.8"/>
                    </RadioGroup>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>