<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AddActivity"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_header">
        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="116dp"
                app:contentScrim="@drawable/gradient_header"
                android:id="@+id/collapsingToolBar"
                app:expandedTitleGravity="top"
                app:expandedTitleMarginTop="22dp"
                app:expandedTitleMarginStart="27dp"
                app:expandedTitleTextAppearance="@style/expanded"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:scrimAnimationDuration="150">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="63dp"
                    android:layout_marginStart="27dp"
                    android:text="새로운 이벤트를 추가할 수 있어요"
                    android:textSize="14sp"
                    android:textColor="#fff"/>

            <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="top"
                    app:title="@string/add_event"
                    app:layout_collapseMode="pin"
                    android:id="@+id/toolBar">
            </androidx.appcompat.widget.Toolbar>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add"
                    android:textColor="@color/colorAccent"
                    android:padding="8dp"
                    android:layout_marginEnd="18dp"
                    android:textSize="14sp"
                    android:layout_marginTop="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/add"
                    android:layout_gravity="end"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_contents"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="27dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="27dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/selectIcon"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="12dp"
                    app:cardBackgroundColor="#323445"
                    app:cardElevation="10dp">

                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                    <FrameLayout
                            android:layout_width="44dp"
                            android:layout_height="44dp"
                            android:background="@drawable/shape_circle"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="16dp">
                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/icon"
                                android:tint="#fff"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_add"
                                android:scaleType="centerCrop"/>
                    </FrameLayout>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_icon"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"
                            android:textColor="#fff"/>
                    <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_enter"
                            android:layout_marginEnd="16dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="27dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="27dp"
                    app:cardCornerRadius="12dp"
                    app:cardBackgroundColor="#323445"
                    app:cardElevation="10dp">

                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:layout_marginEnd="18dp"
                            android:layout_marginTop="18dp">

                        <EditText
                                android:id="@+id/etName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/name"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>